# skillforge

./: .setup.sh  ENRICHMENT_LOG.md  INDEX.md  README.md
ai/llm-prompt-engineering/: SKILL.md
api/graphql-federation/: SKILL.md
api/graphql-schema-design/: SKILL.md
api/openapi-spec/: SKILL.md
api/openapi-specification/: SKILL.md
api/protobuf-serialization/: SKILL.md
api/rest-api-design/: SKILL.md
api/swagger-openapi/: SKILL.md
architecture/caching-strategies/: SKILL.md
architecture/data-validation-patterns/: SKILL.md
architecture/design-patterns-practical/: SKILL.md
architecture/error-handling-patterns/: SKILL.md
architecture/event-driven-architecture/: SKILL.md
architecture/feature-flags/: SKILL.md
architecture/microservices-patterns/: SKILL.md
architecture/rate-limiting-patterns/: SKILL.md
architecture/temporal-workflows/: SKILL.md
architecture/twelve-factor-app/: SKILL.md
aws/aws-iam-policies/: SKILL.md
aws/aws-lambda-patterns/: SKILL.md
aws/s3-patterns/: SKILL.md
aws/terraform-aws-patterns/: SKILL.md
backend/caching-strategies/: SKILL.md
backend/django-advanced/: SKILL.md
backend/encore/: SKILL.md
backend/fastify-patterns/: SKILL.md
backend/nestjs-patterns/: SKILL.md
backend/pocketbase/: SKILL.md
backend/rate-limiting/: SKILL.md
backend/ruby-on-rails/: SKILL.md
backend/websocket-patterns/: SKILL.md
ci-cd/github-actions/: SKILL.md
cloud/aws-lambda/: SKILL.md
cloud/azure-bicep/: SKILL.md
cloud/gcp-cloud-run/: SKILL.md
cloud/s3-patterns/: SKILL.md
cloud/serverless-framework/: SKILL.md
containers/podman-patterns/: SKILL.md
cpp/cmake-patterns/: SKILL.md
css/tailwind-css/: SKILL.md
database/drizzle-orm/: SKILL.md
database/postgres-advanced/: SKILL.md
database/prisma-orm/: SKILL.md
database/redis-patterns/: SKILL.md
database/sqlalchemy-patterns/: SKILL.md
databases/clickhouse-analytics/: SKILL.md
databases/cockroachdb-patterns/: SKILL.md
databases/connection-pooling/: SKILL.md
databases/database-indexing/: SKILL.md
databases/database-migration-strategies/: SKILL.md
databases/drizzle-orm/: SKILL.md
databases/duckdb-analytics/: SKILL.md
databases/dynamodb-patterns/: SKILL.md
databases/elasticsearch-patterns/: SKILL.md
databases/litestream-replication/: SKILL.md
databases/meilisearch-patterns/: SKILL.md
networking/envoy-proxy/assets/wasm-filter-template/: Cargo.toml  README.md
networking/envoy-proxy/assets/wasm-filter-template/src/: lib.rs
python/fastapi-patterns/assets/: Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  settings.py
references/: plugin-system.md
reviews/: ai-llm-prompt-engineering.md  api-graphql-federation.md  api-graphql-schema-design.md  api-openapi-spec.md  api-openapi-specification.md  api-protobuf-serialization.md  api-rest-api-design.md  api-swagger-openapi.md  architecture-caching-strategies.md  architecture-data-validation-patterns.md  architecture-design-patterns-practical.md  architecture-error-handling-patterns.md  architecture-event-driven-architecture.md  architecture-feature-flags.md  architecture-microservices-patterns.md  architecture-rate-limiting-patterns.md  architecture-temporal-workflows.md  architecture-twelve-factor-app.md  aws-aws-iam-policies.md  aws-aws-lambda-patterns.md  aws-s3-patterns.md  aws-terraform-aws-patterns.md  backend-caching-strategies.md  backend-django-advanced.md  backend-fastify-patterns.md  backend-nestjs-patterns.md  backend-rate-limiting.md  backend-ruby-on-rails.md  backend-websocket-patterns.md  ci-cd-github-actions.md  cloud-aws-lambda.md  cloud-azure-bicep.md  cloud-gcp-cloud-run.md  cloud-s3-patterns.md  cloud-serverless-framework.md  containers-podman-patterns.md  cpp-cmake-patterns.md  css-tailwind-css.md  database-drizzle-orm.md  database-postgres-advanced.md  (+232 more)
rust/rust-async/assets/: Cargo.toml  docker-compose.yml  error.rs  main.rs  middleware.rs
(+2253 files in other folders)
