[package]
name = "my-async-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower = { version = "0.5", features = ["util", "timeout", "limit", "retry", "buffer"] }
tower-http = { version = "0.6", features = [
    "trace", "cors", "compression-gzip", "timeout", "limit",
    "request-id", "util", "catch-panic", "normalize-path",
    "set-header", "sensitive-headers", "fs",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", "postgres", "migrate",
    "chrono", "uuid", "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing / Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tokio-util = { version = "0.7", features = ["rt"] }

# Async patterns
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
